--- a/css/style.css
+++ b/css/style.css
@@ -17,21 +17,17 @@
     
 }
 
-
 /* Aumentar a área clicável das setas */
 .custom-button-prev, .custom-button-next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 10;
     cursor: pointer;
 }
     
 .custom-button-prev {
-    left: 190px; /* Ajuste conforme necessário */
-    
+    left: 190px; /* Ajuste conforme necessário */  
 }
-
 
 .custom-button-next {
     right: 200px; /* Ajuste conforme necessário */
@@ -50,12 +46,18 @@ html {
 }
 
 header {
+    box-shadow: 0px 0px 2px rgb(216, 211, 211);
+    width: 100%;
+    max-width: inherit;
     background-color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     gap: 20px;
+    position: fixed;
+    z-index: 10;
+    
 
 }
 
@@ -77,7 +79,6 @@ header {
 .cabecalho {
     display: flex;
     width: 100%;
-
     gap: 200px;
     justify-content: center;
 }
@@ -148,25 +149,29 @@ header {
 /* Section Apresentação de desconto da loja */
 
 .container_oferta {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('../assets/cadeira.svg');
-    background-repeat: no-repeat;
-    background-position: calc(30% - 10px) center;
-    background-size: 550px;
     background-color: #E6E7E9;
     width: 100%;
-    height: 400px;
+    height: 542px;
+}
+
+.container_oferta img {
+    display: flex;
+    margin-top: 120px;
+    height: 420px;
 }
 
 .titulo_oferta {
+    margin-top: 160px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    margin-left: 800px;
+    
 }
 
 .titulo_oferta > span {
@@ -582,14 +587,16 @@ footer {
 
 
     /* Section Container Oferta */
+
+    .container_oferta img {
+        display: flex;
+        margin-top: 120px;
+        height: 150px;
+    }
     .container_oferta {
-        height: 200px;
+        height: 270px;
         background-size: 300px;
         background-position: calc(10% - 10px) center;
-    }
-
-    .titulo_oferta {
-        margin-left: 280px;
     }
 
     .titulo_oferta > span {
@@ -605,7 +612,7 @@ footer {
     /* Section slides */
 
     .container_lancamento > h3 {
-        font-size: 20px;
+        font-size: 15px;
         left: 720px;
         top: -20px;
     }
@@ -615,7 +622,7 @@ footer {
     }
 
     .container_lancamento {
-        margin-top: 100px;
+        margin-top: 40px;
         
     }
     
