--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,33 @@ header {
     height: 20px;
 }
 
+.container_busca_produto {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 85px;
+    left: 370px;
+    position: absolute;
+    background: white;
+    border: 0.5px solid #ccc;
+    width: 490px;
+    max-height: 150px;
+    overflow-y: auto;    
+}
+
+.icone_lupa {
+    height: 15px;
+}
+
+.opcao_produto {
+    padding: 10px;
+    cursor: pointer;
+}
+
+.opcao_produto:hover {
+    background: #f0f0f0;
+}
+
 .dados_usuario {
     position: relative;
     display: flex;
@@ -564,6 +591,14 @@ footer {
         font-size: 12px;
         background-size: 12px;
     }
+
+    .container_busca_produto {
+        font-size: 9px;
+        top: 80px;
+        left: 120px;
+        border: 1px solid #ccc;
+        width: 195px;  
+      }
 
     .dados_usuario > .icone_usuario  {
         height: 15px;
