--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ html {
     justify-content: center;
     margin-top: 50px;
     width: 70%; /* Ajusta para ocupar toda a largura */
-    height: 330px;
+    height: 380px;
     position: relative; /* Importante para posicionar as setas */
     
 }
@@ -53,13 +53,13 @@ html {
 header {
     box-shadow: 0px 0px 2px rgb(216, 211, 211);
     width: 100%;
-    max-width: inherit;
+    max-width: 100%;
     background-color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 20px;
+    gap: 2vw;
     position: fixed;
     z-index: 10;
 }
@@ -90,9 +90,9 @@ header {
     background-position: calc(100% - 10px) center;
     border-radius: 10px;
     border: 1px solid rgb(207, 207, 207); 
-    width: 500px;
-    height: 30px;
-    padding-left: 10px;
+    height: 3em;
+    width: 30vw;
+    padding-left: 2vh;
     outline: none; 
 }
 
@@ -104,26 +104,26 @@ header {
 }
 
 .container_barra_pesquisa > img {
-    height: 20px;
+    height: 1.5vw;
 }
 
+/* container ao apertar todas as categorias */
 .container_busca_produto {
     z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
-    top: 85px;
-    left: 370px;
+    top: 7.5vw;
+    left: 25vw;
     position: absolute;
     background: #ffffff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 490px;
-    max-height: 150px;
-    overflow-y: auto;    
+    width: 32vw;
+     
 }
 
 .icone_lupa {
-    height: 15px;
+    height: 1.5vw;
 }
 
 .opcao_produto {
@@ -144,35 +144,33 @@ header {
 }
 
 .dados_usuario span {
-    top: 8px;
-    right: -8px;
+    top: 0.4vw;
+    right: -0.5vw;
     position: absolute;
-    font-size: 10px;
+    font-size: 0.7rem;
     border-radius: 80px;
     justify-content: center;
     align-items: center;
     display: flex;
     color: #FFFFFF;
-    width: 15px;
+    width: 1vw;
     background-color: #005CFF;
 }
 
 .dados_usuario > h3 {
-    font-size: 15px;
-    width: 70px;
-    height: 40px;
+    font-size: 1rem;
+    width: 5vw;
+    height: 2.6vw;
 }
 
 .dados_usuario > .icone_usuario {
-    height: 20px;
+    height: 1.5vw;
 }
 
 .container_navegacao > .lista_navegacao {
     gap: 20px;
     display: flex;
     text-align: center;
-    
-    
     list-style-type: none
 }
 
@@ -183,13 +181,11 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
-    
-    
+    gap: 10px;   
 }
 
 .icone_hamburguer {
-    height: 10px;
+    height: 0.9vw;
 }
 /* Fim do Header */
 
@@ -202,13 +198,12 @@ header {
     justify-content: center;
     background-color: #E6E7E9;
     width: 100%;
-    height: 542px;
+    height: 32vw;
 }
 
 .container_oferta img {
     display: flex;
-    margin-top: 120px;
-    height: 420px;
+    height: 31.5vw;
 }
 
 .titulo_oferta {
@@ -222,12 +217,13 @@ header {
 }
 
 .titulo_oferta > span {
-    font-size: 70px;
+    font-size: 4rem;
     color: #020202;
 }
 
 .titulo_oferta > h3 {
-    width: 450px;
+    font-size: 1.5rem;
+    width: 30vw;
     color: #005CFF;
 }
 
@@ -239,26 +235,26 @@ header {
     position: relative;
     display: flex;
     flex-direction: column;
-    margin-top: 70px;  
+    margin-top: 7vw;  
 }
 
 .imagem_modelo {
-    width: 140px;
+    width: 20vh;
 }
 
 .container_lancamento > h3 {
     position: absolute;
     display: flex;
-    font-size: 25px;
-    left: 220px;
-    top: -20px;
+    font-size: 2rem;
+    left: 15vw;
+    top: -1vw;
 }
 
 .container_card {
     position: relative;
-    height: 300px;
+    height: 42vh;
     display: flex;
-    width: 180px;
+    width: 25vh;
     border: solid 1px rgb(207, 207, 207);
     border-radius: 8px;
     text-align: center;
@@ -267,24 +263,23 @@ header {
 }
 
 .container_card > h3 {
-    font-size: 12px;
+    font-size: 0.8em;
     font-weight: 400;
 }
 
 .container_promo {
-    font-size: 12px;
+    font-size: 0.8em;
     display: flex;
     flex-direction: column;
-    margin-left: 30px;
-    width: 200px;
+    width: 20vh;
     text-align: left;
 
 }
 
 .container_card > button {
     background-color: #005CFF;
-    width: 160px;
-    height: 40px;
+    width: 20vh;
+    height: 6vh;
     border: none;
     color: #ffffff;
     font-weight: 700;
@@ -295,25 +290,25 @@ header {
     position: relative;
     display: flex;
     background-color: #5EC0BE;
-    width: 60px;
+    width: 8vh;
     color: #ffffff;
     text-align: center;
     align-items: center;
     justify-content: center;
-    bottom: 45px;
-    left: 10px;
-    font-size: 12px;
+    bottom: 6vh;
+    left: 3vh;
+    font-size: 0.8em;
     border-radius: 5px;
 }
 
 .container_card > span {
-    font-size: 12px;
+    font-size: 0.8em;
     position: absolute;
-    left: 10px;
-    top: 15px;
+    left: 2vh;
+    top: 2vh;
     background-color: #00264E;
     color: #ffffff;
-    width: 45px;
+    width: 4em;
     border-radius: 5px;
 }
 
@@ -327,7 +322,7 @@ header {
     align-items: center;
     justify-content: center;
     gap: 20px;
-    margin-top: 80px;
+    margin-top: 10vw;
 }
 
 .container_produto > .produto {
@@ -336,11 +331,11 @@ header {
 }
 
 .produto > img {
-    height: 400px;
+    height: 30vw;
 }
 
 .texto_produto {
-    width: 550px;
+    width: 35vw;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -348,7 +343,12 @@ header {
 }
 
 .texto_produto h2 {
-    font-size: 30px;
+    font-size: 2rem;
+
+}
+
+.texto_produto span {
+    font-size: 1.1rem;
 
 }
 
@@ -357,9 +357,9 @@ header {
 /* Inicio Section da container_localizacao */
 
 .container_localizacao {
-    margin-top: 80px;
+    margin-top: 8vw;
     position: relative;
-    height: 500px;
+    height: 35vw;
     background-color: #DEDEDE;
     display: flex;
     align-items: center;
@@ -371,17 +371,17 @@ header {
 .container_icone_texto {
     position: relative;
     align-items: center;
-    gap: 20px;
+    gap: 2vw;
     display: flex;
-    width: 600px;
+    width: 38vw;
     
 }
 
 .container_icone {
-    margin-top: 50px;
+    margin-top: 5vw;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 2.5vw;
     flex-direction: column;
     display: flex;
 }
@@ -392,58 +392,56 @@ header {
     justify-content: center;
     align-items: center;
     background-color: #005CFF;
-    width: 70px;
-    height: 70px;
+    width: 5vw;
+    height: 5vw;
 }
 
 .cor_icone img {
-    height: 40px;
+    height: 3vw;
 } 
 
 .localizacao {
     justify-content: center;
     align-items: center;
-    gap: 35px;
+    gap: 3vw;
     flex-direction: column;
     display: flex;
 }
 
 .localizacao h1 {
     text-align: center;
-    font-size: 25px;
+    font-size: 2rem;
 }
 
 .localizacao span {
-    width: 400px;
+    width: 28vw;
 }
 
 .container_imagem_xicara_mesa img {
-    top: 200px;
-    bottom: 150px;
-    height: 400px;
+    height: 30vw;
 }
 
 /* Fim Section da container_localizacao */
 
-/* Inicico da Section container_contato */
-
+/* Inicico da Section escritorio*/
 .container_contato {
+    max-width: 100%;
     position: relative;
-    margin-top: 40px;
+    margin-top: 4vw;
     background-image: url('../assets/imagem_escritorio.png');
     background-repeat: no-repeat;
     background-size: cover; /* Faz a imagem cobrir o container */
     background-position: center; /* Centraliza a imagem */
-    height: 700px;
-    margin-bottom: 80px;
+    height: 50vw;
+    margin-bottom: 4vw;
 }
 
 .infor_contato {
     width: 100%;
-    height: 100px;
+    height: 5vw;
     color: #ffffff;
     position: absolute;
-    top: 300px;
+    top: 25vw;
     background-color: #005CFF;
     display: flex;
     align-items: center;
@@ -451,20 +449,23 @@ header {
 }
 
 .infor_contato h2 {
-    font-size: 25px;
+    font-size: 1.5rem;
 }
 
+/* Fim da Section escritorio*/
+
+/* Inicico da Section container_contato */
 .container_registrar {
     max-width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 40px;
+    gap: 4vw;
 }
 
 .container_registrar h3 {
-    font-size: 25px;
+    font-size: 2rem;
 }
 
 .container_registrar strong {
@@ -475,10 +476,10 @@ header {
 .container_formulario {
     position: relative;
     background-color: #DEDEDE;
-    height: 200px;
+    height: 15vw;
     width: 80%;
     border-radius: 10px;
-    margin-bottom: 100px;
+    margin-bottom: 10vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -490,20 +491,21 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 3vh;
 }
 
 .container_conteudo span {
-    font-size: 15px;
+    font-size: 1.2vw;
 }
 
 .form {
-    padding-left: 10px;
+    padding-left: 1vw;
     border: 1px solid rgb(207, 207, 207); 
     outline: none;
     border-radius: 8px;
-    height: 40px;
-    width: 250px;
+    height: 3vw;
+    width: 18vw;
+    
     
 }
 
@@ -511,14 +513,14 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5px;
+    gap: 1vw;
 }
 
 .botao_cadastrar {
     background-color: #005CFF;
     border: none;
-    height: 40px;
-    width: 90px;
+    height: 2.5vw;
+    width: 7vw;
     border-radius: 8px;
     color: #ffffff;
     font-weight: 700;
@@ -534,9 +536,9 @@ footer {
     align-items: center;
     justify-content: center;
     background-color: #F5F5F5;
-    height: 600px;
+    height: 50vw;
     flex-direction: column;
-    gap: 80px;
+    gap: 5vw;
     
     
 }
@@ -544,34 +546,35 @@ footer {
 .logo_rede_social {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 2vw;
 }
 
 .logo_rede_social img {
-    height: 20px;
-    width: 150px;
+    height: 1.3vw;
+    width: 10vw;
 }
+
 .container_sobre_nos {
     display: flex;
-    gap: 80px;
-    margin-top: 80px;
+    gap: 8vw;
+    margin-top: 5vw;
 }
 
 .sobre h4 {
-    font-size: 20px;
+    font-size: 1.2em;
     font-weight: 700;
 }
 
 .sobre h5 {
-    font-size: 15px;
+    font-size: 1em;
 }
 
 .sobre .horario {
-    width: 200px;
+    width: 15vw;
 }
 
 .container_cartao > img {
-    height: 20px;
+    height: 1.5vw;
  
     
 }
@@ -581,21 +584,21 @@ footer {
     justify-content: center;
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 5vw;
     width: 100%;
     background-color: #FFFFFF;
-    height: 300px;
+    height: 20vw;
 }
 
 .container_patriocinio span {
-    font-size: 15px;
+    font-size: 1em;
     display: flex;
     text-align: center;
-    width: 900px;
+    width: 70vw;
 }
 
 .container_patriocinio img {
-    height: 30px;
+    height: 2vw;
 }
 
 /* Fim do Footer */
@@ -684,9 +687,6 @@ footer {
 @media (max-width: 768px) {
 
 /* Inicio do Header */
-    .container_cupom_desconto {
-        font-size: 1.5vh;
-    }
 
     .cabecalho {
         flex-direction: column;  
@@ -697,48 +697,56 @@ footer {
     }
 
     .container_barra_pesquisa > img {
-        height: 15px;
+        height: 4vw;
     }
 
     .container_barra_pesquisa > input {
-        height: 35px;
-        width: 300px;
-        font-size: 1.5vh;
-        background-size: 12px;
+        width: 80vw;
+        font-size: 0.8em;
     }
 
     .container_busca_produto {
-        font-size: 1.5vh;
-        top: 130px;
-        left: 30px;
-        width: 330px;  
+        font-size: 0.8rem;
+        top: 35vw;
+        left: 10vw;
+        width: 80vw;  
       }
 
     .dados_usuario > .icone_usuario  {
-        height: 15px;
+        height: 3.5vw;
     }
 
+    /* colocar dentro do scrool */
+
     .dados_usuario {
-        right: 20px;
-        top: 40px;
+        display: none;
+        right: 4vw;
+        top: 15vw;
         position: absolute;
     }
 
     .dados_usuario > h3 {
-        width: 40px;
+        width: 10vw;
         display: flex;
         align-items: center;
         text-align: center;
-        font-size: 1.2vh
-       
+        font-size: 0.6rem;
     }
 
     .container_navegacao {
-        font-size: 1.5vh
+        font-size: 0.8rem;
         
     }
 
-    .lista_navegacao li:nth-child(n+4) { 
+    .dados_usuario span {
+        top: -0.5vw;
+        font-size: 0.5rem;
+        width: 2vw;
+        
+    }
+
+    /* Fazwer um scrool */
+    .lista_navegacao li { 
         display: none;
     }
 
@@ -766,7 +774,7 @@ footer {
     }
 
     .lista_departamentos li {
-        font-size: 1.3vh;
+        font-size: 0.7rem;
         
     }
 
@@ -798,23 +806,23 @@ footer {
 /* Inicio da Section Container Oferta */
 
     .container_oferta img {
-        margin-top: 150px;
-        height: 150px;
+        margin-top: 38vw;
+        height: 38vw;
         
     }
     .container_oferta {
-        height: 300px;
+        height: 76vw;
        
     }
 
     .titulo_oferta > span {
-        font-size: 3vh;
+        font-size: 1.8em;
         color: #020202;
     }
 
     .titulo_oferta > h3 {
-        font-size: 1.5vh;
-        width: 150px;
+        font-size: 1em;
+        width: 30vw;
     }
 
 /* Inicio da Section Container Oferta */
@@ -822,9 +830,9 @@ footer {
 /* Inicio da Section container_lancamento*/
 
     .container_lancamento > h3 {
-        font-size: 2vh;
-        margin-top: 30px;
-        left: 40px;
+        font-size: 1.5em;
+        margin-top: 3vw;
+        left: 5vw;
     }
 /* Fim da Section container_lancamento*/
 
@@ -858,27 +866,28 @@ footer {
 /* Inicio da Section container produto */
 
     .container_produto {
-        
+        display: flex;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
         flex-direction: column;
     }
     .produto > img {
-        height: 230px; 
+        height: 60vw; 
     }
 
     .texto_produto {
-        text-align: center;
-        width: 200px;
+        width: 60vw;
         flex-direction: column;
-        gap: 10px;
+       
     }
 
     .texto_produto span {
-        width: 200px;
-        font-size: 1.5vh;
+        font-size: 0.8em;
     }
 
     .texto_produto h2 {
-        font-size: 2.5vh;
+        font-size: 1.5em;
     }
 
 /* Fim da Section container produto */
@@ -886,50 +895,40 @@ footer {
 /* Inicio da Section container_localizacao */
 
 .container_localizacao {
+    height: 180vw;
     flex-direction: column;
 
 }
 
 .container_icone_texto {
     justify-content: center;
-    position: relative;
-    align-items: center;
-    gap: 15px;
-    display: flex;
-    width: 200px;
 }
 
 .container_icone {
-    gap: 25px;
+    gap: 12vw;
     flex-direction: column;
-
 }
 
 .cor_icone {
-    width: 40px;
-    height: 40px;
+    width: 8vw;
+    height: 8vw;
 }
 
 .cor_icone img {
-    height: 20px;
+    height: 4vw;
 } 
 
-.localizacao {
-    gap: 10px;
-
-}
-
 .localizacao span {
-    width: 260px;
-    font-size: 12px;
+    width: 80vw;
+    font-size: 1em;
 }
 
 .localizacao h1 {
-    font-size: 15px;
+    font-size: 1.5em;
 }
 
 .container_imagem_xicara_mesa img {
-    height: 230px;
+    height: 50vw;
 }
 
 /* Fim da Section container_localizacao */
@@ -937,19 +936,18 @@ footer {
 /* Inicio da Section container_contato */
     
     .container_contato {
+        text-align: center;
         height: 350px;
         margin-bottom: 80px;
     }
     
     .infor_contato {
-        width: 100%;
-        height: 40px;
-        top: 170px;
-        background-color: #005CFF;
+        height: 10vw;
+        top: 35vw; 
     }
     
     .infor_contato h2 {
-        font-size: 1.3vh;
+        font-size: 0.9em;
     }
 
 /* Fim da Section container_contato */
@@ -957,17 +955,18 @@ footer {
 /* Inicio da container_registrar */
 
     .container_formulario {
-        height: 300px;
-        width: 280px;
+        height: 70vw;
+        width: 60vw;
     }
     
     .container_registrar h3 {
-        font-size: 2vh;
+        font-size: 1.5em;
     }
     
     .form {
-        font-size: 1.5vh;
-        width: 230px;
+        font-size: 1em;
+        width: 50vw;
+        height: 8vw;
     }
     
     .container_conteudo  {
@@ -975,12 +974,13 @@ footer {
     }
     
     .container_conteudo span {
-        font-size: 1.2vh;
+        width: 45vw;
+        font-size: 0.8em;
     }
     
     .botao_cadastrar {
-        font-size: 11px;
-        width: 200px;
+        width: 50vw;
+        height: 8vw;
     }
 
 /* Fim da container_registrar */
@@ -988,22 +988,22 @@ footer {
 /* Inicio do footer */
 
     footer {
-        gap: 20px;
-        height: 800px;
+        gap: 10vw;
+        height: 200vw;
     }
 
     .sobre h4 {
-        font-size: 1.5vh;
+        font-size: 1em;
         font-weight: 700;
     }
     
     .sobre h5 {
-        font-size: 1.2vh;
+        font-size: 0.8em;
     }
 
     .logo_rede_social img {
-        height: 15px;
-        width: 100px;
+        height: 3vw;
+        width: 20vw;
     }
 
     .container_sobre_nos {
@@ -1011,20 +1011,24 @@ footer {
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        gap: 25px;
+        gap: 8vw;
     }
 
     .container_cartao > img {
-        height: 12px;
+        height: 3vw;
     }
 
     .container_patriocinio {
-        gap: 10px;
+        gap: 4vw;
     }
 
     .container_patriocinio span {
-        font-size: 1.2vh;
-        width: 320px;
+        font-size: 0.7em;
+        width: 80vw;
+    }
+
+    .sobre .horario {
+        width: 50vw;
     }
 
     .container_patriocinio img {
